[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "langfoundation"
version = "1.6.0"
description = "langfoundation"
authors = ["Yannick Stephan <stephan.yannick@me.com>"]
readme = "README.md"
packages = [{include = "langfoundation"}]

###################################
# Ruff & MyPy
###################################

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

exclude = [ "notebooks", "examples", "example_data",]

[tool.ruff]
target-version = "py39"
line-length = 140

[tool.ruff.lint]
select = [ "E", "F", "I", "T201",]

#################################################################
# Required Dependencies
#################################################################

[tool.poetry.dependencies]
# Python
python = ">=3.9,<4.0"
pydantic = "~2.9"


# Langchain
langchain = "~0.3"
langchain-core = "~0.3"
langgraph = "~0.2"

# Json
json-repair = "~0.29"

# Enum
strenum = "~0.4"

# Log
rich = "~13"

#################################################################
# Optional Dependencies
#################################################################

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
ipykernel = "~6"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "~0.5"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"
types-toml = "^0.10.8.1"
types-pytz = "^2023.3.0.0"
types-chardet = "^5.0.4.6"

#################################################################
# Test
#################################################################

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~8.2"
pytest-asyncio = "~0.23"


[tool.pytest.ini_options]
python_files = "test_*" # all python files that starts with test_
python_classes = "Test*" # all python classes that starts with Test
python_functions = "test_*" # all python functions that starts with test_
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]
